--- a/.bmad-ephemeral/sprint-status.yaml
+++ b/.bmad-ephemeral/sprint-status.yaml
@@ -36,9 +36,9 @@ tracking_system: "file-system"
 story_location: "/Users/alhamdulillah/codespace/whatcha-doin/docs/stories"
 
 development_status:
-  epic-1: "backlog"
-  0-1-db-setup: "backlog"
-  1-1-sign-up: "backlog"
+  epic-1: "contexted"
+  0-1-db-setup: "done"
+  1-1-sign-up: "in-progress"
   1-2-authentication: "backlog"
   1-3-bio: "backlog"
   1-4-public-profile: "backlog"
