--- a/.bmad-ephemeral/sprint-status.yaml
+++ b/.bmad-ephemeral/sprint-status.yaml
@@ -38,10 +38,10 @@ story_location: "/Users/alhamdulillah/codespace/whatcha-doin/docs/stories"
 development_status:
   epic-1: "contexted"
   0-1-db-setup: "done"
-  1-1-sign-up: "in-progress"
-  1-2-authentication: "backlog"
-  1-3-bio: "backlog"
-  1-4-public-profile: "backlog"
+  1-1-sign-up: "done"
+  1-2-authentication: "in-progress"
+  1-3-bio: "in-progress"
+  1-4-public-profile: "ready-for-dev"
   epic-1-retrospective: "optional"
   epic-2: "backlog"
   2-1-create-habit: "backlog"
