--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -37,7 +37,7 @@ story_location: "/Users/alhamdulillah/codespace/whatcha-doin/docs/sprint-artifac
 development_status:
   epic-1: contexted
   1-1-project-setup-and-core-infrastructure: done
-  1-2-implement-foundational-dashboard-layout: ready-for-dev
+  1-2-implement-foundational-dashboard-layout: in-progress
   1-3-integrate-existing-habitcard-into-the-pile: ready-for-dev
   1-4-refactor-and-integrate-habitcreator-into-the-pile: ready-for-dev
   epic-1-retrospective: optional
