--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-next": "16.0.2",
     "jsdom": "^27.2.0",
     "tailwindcss": "^4",
+    "tsconfig-paths": "^4.2.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^4.0.8"
