--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -49,4 +49,4 @@ workflow_status:
   solutioning-gate-check: docs/implementation-readiness-report-2025-11-15.md  # agent: architect
 
   # Phase 3: Implementation
-  sprint-planning: .bmad-ephemeral/sprint-status.yaml  # agent: sm
+  sprint-planning:   # agent: sm
