--- a/package.json
+++ b/package.json
@@ -11,44 +11,26 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.81.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cobe": "^0.6.5",
-    "lucide-react": "^0.553.0",
-    "motion": "^12.23.24",
-    "next": "16.0.2",
-    "next-themes": "^0.4.6",
+    "lucide-react": "^0.554.0",
+    "next": "^16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.25",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.2",
-    "jsdom": "^27.2.0",
+    "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "tsconfig-paths": "^4.2.0",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "vitest": "^4.0.8"
+    "typescript": "^5"
   }
 }
