--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,18 +18,19 @@
         "name": "next"
       }
     ],
-    "types": ["vitest/globals"],
     "paths": {
       "@/*": ["./*"]
     }
   },
   "include": [
-    "next-env.d.ts",
+    "./next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "whatcha-doin/node_modules"
+  ]
 }
