done with PWA, alhamdulillah. Super start with habits 1-6-7-2

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,18 +2,19 @@
   "name": "whatcha-doin",
   "short_name": "whatcha-doin",
   "description": "Building consistency one habit at a time",
+  "start_url": "/",
   "icons": [
     {
       "src": "/favicons/light/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     },
     {
       "src": "/favicons/light/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "maskable any"
     }
   ],
   "theme_color": "#F1F3F5",
