--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "FORCE_COLOR=true next dev | pino-pretty",
-    "build": "next build",
+    "dev": "FORCE_COLOR=true next dev --webpack | pino-pretty",
+    "build": "next build --webpack",
     "test": "jest",
     "e2e": "playwright test",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
