--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,6 @@
 # Supabase Configuration
-# Get these values from your Supabase project settings
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Development Mode Toggle
 # Set to "true" to use mock authentication with test user
@@ -9,23 +8,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 NEXT_PUBLIC_DEV_MODE_ENABLED=false
 
 # Lark Webhook Configuration
-LARK_WEBHOOK_URL=your-lark-webhook-url
-LARK_MESSAGE_PREFIX="Whatcha-Doin:"
-
-
-Now the following changes are only on the private page
-  1. the junked habits in the pile must be greyed out and placed according to the
-  sorting order, read @docs/architecture.md, @docs/PRD.md and
-  @docs/ux-design-specification.md for reference, they must look gross such that user
-  feels guilty of not working on them.
-  2. the edit and delete buttons in the modal must be enhanced. look at userpopever
-  logout button for inspiration. I need consistent design throughout my app. you can
-  also refer @docs/ux-color-themes.html @docs/ux-public-profile.html
-  @docs/ux-completion-modal.html @docs/ux-design-directions.html
-  @docs/ux-grace-period-screen.html as these are my mockups following the
-  @docs/ux-design-specification.md
-
-1. the page is not centered in notfound screens, check it
-2. can you add a theme color border around the main card and on section dividers in public and private pages as shown
-in @
-3. I wanna add new compartment to my habits
+LARK_WEBHOOK_URL=
+LARK_MESSAGE_PREFIX=
