--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.0.0",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "next": "^16.0.3",
