style: refactor bio into a distinct card section with better typography and line breaks

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
+    "remark-breaks": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
