--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@supabase/supabase-js": "^2.84.0",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@uiw/react-markdown-editor": "^6.1.4",
+    "@uiw/react-md-editor": "^4.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
