--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@uiw/react-markdown-editor": "^6.1.4",
     "@uiw/react-md-editor": "^4.0.10",
+    "@yudiel/react-qr-scanner": "^2.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -54,6 +55,7 @@
     "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "pino": "^10.1.0",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
